apps/cringe/base/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cringe-dep
  labels:
    app: cringe

spec:
  replicas: 1
  selector:
    matchLabels:
      app: cringe
  template:
    metadata:
      labels:
        app: cringe
    spec:
      containers:
        - name: cringe
          image: IMAGES/APP
          imagePullPolicy: Always

          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 80

          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cringe-db-dep
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: cringe-db-pvc

      containers:
        - name: postgres
          image: postgres:alpine

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/18/docker
              subPath: data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 2
            periodSeconds: 1
