apps/cringe/base/service.yml
apiVersion: v1
kind: Service

metadata:
  name: cringe-svc

spec:
  type: ClusterIP
  selector:
    app: cringe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: cringe
  name: cringe-db-svc
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
