apps/cringe/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cringe-ing
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"

spec:
  ingressClassName: nginx
  rules:
    - host: cringe.ttj.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cringe-svc
                port:
                  number: 80
